        - Eliminado componente TextAreaRounded en \textarea
        - Creado componente TextAreaComponents para refactorizar los anteriores en TextAreaComponents.tsx
        - Modificadas exportaciones para los componentes textarea en main.ts
        - Modificadas exportaciones para renderizar componentes textarea en index.ts
        - Modificadas importaciones para renderizar componentes textarea en \screen\home.tsx
    Observaciones:

2025/02/05 - Components y Screen - Valentina Rincón
    Cambios:
        - Creada carpeta atoms en \components
        - Creada carpeta molecules en \components
        - Creada carpeta organisms en \components
        - Creada carpeta templates en \components
        - Creado componente Form en molecules\Form
        - Implementados componentes Button e Input para la creacion del formularion en Form.tsx
        - Implementados componentes Button e Input para la creacion del formularion en Form.tsx
        - Movidas carpetas alert, badge, button, chips, input, textarea, tooltip en \atoms  
        - Eliminada carpeta core ya que en el momento no se le está implementando funcionalidad.
        - Renderizado componente Form en \home
    Observaciones: Se continuara trabajando en el componente form

    2025/02/06 - Components y Screen - Valentina Rincón
    Cambios:
        - Creado componente DefaultFormMedium en \Form\DefaultFormMedium.tsx
        - Creado componente DefaultFormNormal en \Form\DefaultFormNormal.tsx
        - Creado archivo de barril para exportar los componentes Form en \index.ts 
        - Modificados componentes (Input.tsx, InputBorder.tsx, InputDefault.tsx, InputLine) para darle soporte en la personalizacion de icons. 
        - Renombrado componente Form a DefaultForm en \Form\DefaultForm.tsx
    Observaciones: Se continuara trabajando en el componente form

     2025/02/07 - Components y Screen - Valentina Rincón
    Cambios:
       - Creado componente Date.tsx
    Observaciones: